feat(extensions): add RepoPrompt MCP proxy extension for Pi with syntax + diff highlighting, window binding, guardrails)

--- a/extensions/tools-config.json
+++ b/extensions/tools-config.json
@@ -1,7 +1,5 @@
 {
   "enabledTools": [
-    "rp_bind",
-    "rp_exec",
     "read",
     "bash",
     "find",
@@ -11,6 +9,8 @@
     "todo",
     "write",
     "grep",
-    "subagent"
+    "subagent",
+    "question",
+    "rp"
   ]
 }
