chore: updates for repoprompt 1.6.0

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ prompts/rp-build.md
 prompts/rp-investigate.md
 prompts/rp-oracle-export.md
 prompts/rp-reminder.md
+prompts/rp-refactor.md
+prompts/rp-review.md
