feat: replace brave-search example skill with improved extension

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ prompts/rp-review.md
 
 # Version tracking ephemeral state
 skills/repoprompt-tool-guidance-refresh/rp-tool-defs/.baseline_version
+
+# Markdown clips from Brave search
+extensions/brave-search/.clips/
