chore: update affected extensions to work with pi 0.51.0

--- a/extensions/brave-search/package.json
+++ b/extensions/brave-search/package.json
@@ -7,5 +7,8 @@
     "jsdom": "^26.0.0",
     "turndown": "^7.2.0",
     "turndown-plugin-gfm": "^1.0.2"
+  },
+  "devDependencies": {
+    "@mariozechner/pi-coding-agent": "^0.51.0"
   }
 }
