--- a/extensions/sandbox/package.json
+++ b/extensions/sandbox/package.json
@@ -15,5 +15,8 @@
 	},
 	"dependencies": {
 		"@anthropic-ai/sandbox-runtime": "^0.0.26"
+	},
+	"devDependencies": {
+		"@mariozechner/pi-coding-agent": "^0.51.0"
 	}
 }
