--- a/extensions/rewind/package.json
+++ b/extensions/rewind/package.json
@@ -21,5 +21,8 @@
   "license": "MIT",
   "pi": {
     "extensions": ["./index.ts"]
+  },
+  "devDependencies": {
+    "@mariozechner/pi-coding-agent": "^0.51.0"
   }
 }
