--- a/extensions/skill-palette/package.json
+++ b/extensions/skill-palette/package.json
@@ -8,5 +8,8 @@
 		"url": "https://github.com/nicobailon/pi-skill-palette"
 	},
 	"author": "nicobailon",
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"@mariozechner/pi-coding-agent": "^0.51.0"
+	}
 }
