--- a/packages/pi-repoprompt-mcp/package.json
+++ b/packages/pi-repoprompt-mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pi-repoprompt-mcp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A token-efficient RepoPrompt MCP integration for Pi",
   "keywords": ["pi-package", "pi", "pi-coding-agent", "repoprompt", "mcp"],
   "license": "MIT",
@@ -22,7 +22,7 @@
     "diff": "^7.0.0"
   },
   "peerDependencies": {
-    "@mariozechner/pi-coding-agent": "*",
+    "@mariozechner/pi-coding-agent": ">=0.51.0",
     "@mariozechner/pi-tui": "*",
     "@sinclair/typebox": "*"
   },
