--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,9 @@ prompts/rp-review.md
 # Version tracking ephemeral state
 skills/repoprompt-tool-guidance-refresh/rp-tool-defs/.baseline_version
 
-# Markdown clips from Brave search
+# Outputs from extensions
 extensions/brave-search/.clips/
+extensions/file-based-compactions/compactions/
+
+# .pi folders
+**/.pi/
