--- a/packages/pi-poly-notify/package.json
+++ b/packages/pi-poly-notify/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "pi-notify",
-  "version": "0.1.1",
+  "name": "pi-poly-notify",
+  "version": "0.1.2",
   "description": "Highly configurable desktop/sound/Pushover notifications when Pi agent turn finishes and took longer than a definable threshold",
-  "keywords": ["pi-package", "pi", "pi-coding-agent"],
+  "keywords": [
+    "pi-package",
+    "pi",
+    "pi-coding-agent"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/w-winter/dot314.git",
-    "directory": "packages/pi-notify"
+    "directory": "packages/pi-poly-notify"
   },
   "bugs": {
     "url": "https://github.com/w-winter/dot314/issues"
   },
   "homepage": "https://github.com/w-winter/dot314#readme",
   "pi": {
-    "extensions": ["extensions/notify/index.ts"]
+    "extensions": [
+      "extensions/poly-notify/index.ts"
+    ]
   },
   "peerDependencies": {
     "@mariozechner/pi-coding-agent": "*",
@@ -23,15 +29,26 @@
   "scripts": {
     "prepack": "node ../../scripts/pi-package-prepack.mjs"
   },
-  "files": ["extensions/**", "README.md", "LICENSE", "package.json"],
+  "files": [
+    "extensions/poly-notify/**",
+    "README.md",
+    "LICENSE",
+    "package.json"
+  ],
   "dot314Prepack": {
     "copy": [
-      { "from": "../../extensions/notify/index.ts", "to": "extensions/notify/index.ts" },
       {
-        "from": "../../extensions/notify/notify.json.example",
-        "to": "extensions/notify/notify.json.example"
+        "from": "../../extensions/poly-notify/index.ts",
+        "to": "extensions/poly-notify/index.ts"
       },
-      { "from": "../../LICENSE", "to": "LICENSE" }
+      {
+        "from": "../../extensions/poly-notify/notify.json.example",
+        "to": "extensions/poly-notify/notify.json.example"
+      },
+      {
+        "from": "../../LICENSE",
+        "to": "LICENSE"
+      }
     ]
   }
 }
