feat(extensions): add session-ask and session-lineage tools for post-compaction or post-fork rediscovery

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "./extensions/repoprompt-mcp/src/index.ts",
       "./extensions/rp-native-tools-lock/index.ts",
       "./extensions/sandbox/index.ts",
+      "./extensions/session-ask/index.ts",
       "./extensions/tools/index.ts",
       "./extensions/usage-bar.ts",
       "./extensions/vog/index.ts"
