--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "./extensions/agentic-compaction/index.ts",
       "./extensions/guardrails/index.ts",
       "./extensions/md.ts",
+      "./extensions/model-aware-compaction/index.ts",
       "./extensions/model-sysprompt-appendix/index.ts",
       "./extensions/poly-notify/index.ts",
       "./extensions/oracle.ts",
