--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dot314",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "description": "Collection of original or modded Pi themes, skills, and extensions, several of which facilitate Pi's integration with RepoPrompt.",
   "keywords": [
@@ -39,6 +39,7 @@
       "./extensions/rp-native-tools-lock/index.ts",
       "./extensions/sandbox/index.ts",
       "./extensions/session-ask/index.ts",
+      "./extensions/session-switch.ts",
       "./extensions/tools/index.ts",
       "./extensions/usage-bar.ts",
       "./extensions/vog/index.ts"
