feat(extensions): add /roam for post-hoc pi session handoffs into tmux for remote/mobile continuation

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "./extensions/model-aware-compaction/index.ts",
       "./extensions/model-sysprompt-appendix/index.ts",
       "./extensions/move-session.ts",
+      "./extensions/roam/index.ts",
       "./extensions/poly-notify/index.ts",
       "./extensions/oracle.ts",
       "./extensions/plan-mode.ts",
